--- a/Module4Handon.ipynb
+++ b/Module4Handon.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c78056aa",
    "metadata": {
     "pycharm": {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f7a2bb72",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "5   Deeft          0  0.000000e+00     6"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "448191d3",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "5   Deeft          0  0.000000e+00     6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "16802d39",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
        "5   Deeft          0  0.000000     5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2a359b89",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "a|i    559"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc05e3c0",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "4  aback      3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "2d981654",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a493efd3",
    "metadata": {},
    "outputs": [],
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "1de3b8cc",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "aa5cb689",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
        "5   Deeft          0  0.000000e+00     6  0.003311"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "b3d58c70",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
        "5   Deeft          0  0.000000e+00     6  0.003311        0.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "e1224dc5",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "5   Deeft          0  0.000000     5  0.003311        0.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,26 +1068,276 @@
    "id": "703dcffb",
    "metadata": {},
    "source": [
-    "## Demonstrate the result"
+    "## Demonstrate the result (Use COCA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5274fd6f",
+   "metadata": {},
+   "source": [
+    "### context-sensitive spelling conrrection approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ab81866",
+   "metadata": {},
+   "source": [
+    "For each word in sentence (phrase, query)\n",
+    "- generate the candidate set\n",
+    "  - the word itself\n",
+    "  - all known words with edit distance = 1\n",
+    "  - all known words that are homophones\n",
+    "- choose best candidates with the Noisy channel modified."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5903f22a",
+   "metadata": {},
+   "source": [
+    "### Noisy channel for real-word spell correction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abd596d7",
+   "metadata": {},
+   "source": [
+    "Given a sentence x1,x2,x3,...,xn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ba505600",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mock_sentence = [\n",
+    "    'a defeat',\n",
+    "    'a defect',\n",
+    "    'defeat free',\n",
+    "    'defect free'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3da857",
+   "metadata": {},
+   "source": [
+    "Generate a set of candidates for each word xi\n",
+    "Choose the sequence W that maximize P(W | x1,x2,...,xn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "44375cb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mock_sentence = [\n",
+    "    ['a defeat', 607], \n",
+    "    ['a defect', 453], \n",
+    "    ['defeat free', 1], \n",
+    "    ['defect free', 5]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19d51bf0",
+   "metadata": {},
+   "source": [
+    "### Incorporating context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7078870e",
+   "metadata": {},
+   "source": [
+    "If we do not have access to the prefered context-specific corpus\n",
+    "- determining whether defeat or defect is more appropriate will require looking at the context words\n",
+    "\n",
+    "There are better language models, simplest ones are such as bigram language model\n",
+    "`P(W1...Wn) = P(W1)P(W2|W1)...P(Wn|Wn-1)`\n",
+    "\n",
+    "counting the co-occurrences divided by occurences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee66ed4",
+   "metadata": {},
+   "source": [
+    "Bigram language model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3c19b0aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mock_sentence = [\n",
+    "    ['a defeat','P(defeat | a)', 'C(a defeat)/C(defeat)', 607], \n",
+    "    ['a defect','P(defect | a)', 'C(a defect)/C(defect)', 453], \n",
+    "    ['defeat free','P(free | defeat)', 'C(defeat free) / C(free)', 1], \n",
+    "    ['defect free','P(free | defect)','C(defect free) / C(free)', 5]\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c249a7d2",
+   "id": "2eefe206",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>P(Wk|Wk-1)</th>\n",
+       "      <th>C(Wk-1|Wk)/C(Wk-1)</th>\n",
+       "      <th>frequency</th>\n",
+       "      <th>evaluate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>word</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a defeat</th>\n",
+       "      <td>P(defeat | a)</td>\n",
+       "      <td>C(a defeat)/C(defeat)</td>\n",
+       "      <td>607</td>\n",
+       "      <td>0.027658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>a defect</th>\n",
+       "      <td>P(defect | a)</td>\n",
+       "      <td>C(a defect)/C(defect)</td>\n",
+       "      <td>453</td>\n",
+       "      <td>0.114020</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>defeat free</th>\n",
+       "      <td>P(free | defeat)</td>\n",
+       "      <td>C(defeat free) / C(free)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000004</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>defect free</th>\n",
+       "      <td>P(free | defect)</td>\n",
+       "      <td>C(defect free) / C(free)</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.000020</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   P(Wk|Wk-1)        C(Wk-1|Wk)/C(Wk-1)  frequency  evaluate\n",
+       "word                                                                        \n",
+       "a defeat        P(defeat | a)     C(a defeat)/C(defeat)        607  0.027658\n",
+       "a defect        P(defect | a)     C(a defect)/C(defect)        453  0.114020\n",
+       "defeat free  P(free | defeat)  C(defeat free) / C(free)          1  0.000004\n",
+       "defect free  P(free | defect)  C(defect free) / C(free)          5  0.000020"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# number 3 goes there"
+    "COCA_mock = pd.DataFrame(\n",
+    "    mock_sentence,\n",
+    "    columns=['word','P(Wk|Wk-1)','C(Wk-1|Wk)/C(Wk-1)','frequency']\n",
+    ")\n",
+    "\n",
+    "COCA_mock.set_index('word', inplace=True)\n",
+    "COCA_mock['evaluate'] = [\n",
+    "  COCA_mock['frequency']['a defeat']/COCA['frequency'][COCA[COCA['word'] == 'defeat'].index].values[0],\n",
+    "  COCA_mock['frequency']['a defect']/COCA['frequency'][COCA[COCA['word'] == 'defect'].index].values[0],\n",
+    "  COCA_mock['frequency']['defeat free']/256258 ,\n",
+    "  COCA_mock['frequency']['defect free']/256258,\n",
+    "]\n",
+    "COCA_mock.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0b6a00ca",
+   "execution_count": 20,
+   "id": "09ff95ee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(a defeat free) =  1.0792848853794279e-07\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"P(a defeat free) = \",COCA_mock[\"evaluate\"][\"a defeat\"]*COCA_mock[\"evaluate\"][\"defeat free\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6e41f1e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P(a defect free) =  2.2247038632843983e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"P(a defect free) = \",COCA_mock[\"evaluate\"][\"a defect\"]*COCA_mock[\"evaluate\"][\"defect free\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7430ecbb",
+   "metadata": {},
+   "source": [
+    "ended handon 4 (ps. sorry for late submisson my computer have problem to run multiprocessing. so I decide to not use it. what a 4 day wasted)"
+   ]
   }
  ],
  "metadata": {
